--- a/Cycle 1/Day-2/feature-engineering.ipynb
+++ b/Cycle 1/Day-2/feature-engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3391b962",
    "metadata": {
     "ExecuteTime": {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4883974b",
    "metadata": {
     "ExecuteTime": {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b2b5f0e2",
    "metadata": {
     "ExecuteTime": {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "37af86cf",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c967e8bd",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3d89c957",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "826135ea",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b2792404",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "078a2c15",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "126e0543",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "5103702e",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "a726f080",
    "metadata": {},
    "outputs": [
@@ -166,26 +166,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE:  0.08359930723905563\n",
-      "R2:  0.6247365851686427\n"
+      "MSE:  0.08389928181966146\n",
+      "R2:  0.6233900490644756\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
     "\n",
     "linear = LinearRegression()\n",
     "linear.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = linear.predict(X_test)\n",
-    "print(\"MSE: \", mean_squared_error(y_test, y_pred))\n",
-    "print(\"R2: \", r2_score(y_test, y_pred))"
+    "y_pred_lr = linear.predict(X_test)\n",
+    "print(\"MSE: \", mean_squared_error(y_test, y_pred_lr))\n",
+    "print(\"R2: \", r2_score(y_test, y_pred_lr))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "3005a002",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE:  0.08375506473431114\n",
+      "R2:  0.6240374156242346\n"
+     ]
+    }
+   ],
+   "source": [
+    "ridge = Ridge()\n",
+    "ridge.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_rid = ridge.predict(X_test)\n",
+    "print(\"MSE: \", mean_squared_error(y_test, y_pred_rid))\n",
+    "print(\"R2: \", r2_score(y_test, y_pred_rid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "aa9183f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE:  0.08158048833550284\n",
+      "R2:  0.6337987281539543\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso = Lasso(alpha= 0.01)\n",
+    "lasso.fit(X_train, y_train)\n",
+    "\n",
+    "y_pre_las = lasso.predict(X_test)\n",
+    "print(\"MSE: \", mean_squared_error(y_test, y_pre_las))\n",
+    "print(\"R2: \", r2_score(y_test, y_pre_las))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "05eee916",
    "metadata": {},
    "outputs": [],
