--- a/Cycle 3/Day 5/MNSIT.ipynb
+++ b/Cycle 3/Day 5/MNSIT.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -31,82 +17,87 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "_uXJ3K-tWdfS"
+      },
+      "outputs": [],
       "source": [
         "transform = transforms.Compose([\n",
         "    transforms.ToTensor(),\n",
         "    transforms.Normalize((0.5,), (0.5,))\n",
         "    ])"
-      ],
-      "metadata": {
-        "id": "_uXJ3K-tWdfS"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
-        "test = datasets.MNIST(root='./data', train=False, download=True, transform=transform)"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "ZRH_PU_dX_AM"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "train = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
+        "test = datasets.MNIST(root='./data', train=False, download=True, transform=transform)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_train = DataLoader(train, batch_size=64, shuffle=True)\n",
-        "X_test = DataLoader(test, batch_size=64, shuffle=True)"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "1RuuGzvYdaIo"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_train = DataLoader(train, batch_size=64, shuffle=True)\n",
+        "X_test = DataLoader(test, batch_size=64, shuffle=True)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rG9_bCnIdxiw"
+      },
+      "outputs": [],
       "source": [
         "class NN(nn.Module):\n",
         "  def __init__(self):\n",
         "    super(NN, self).__init__()\n",
-        "    self.fc1 = nn.Linear(28*28, 512)\n",
-        "    self.fc2 = nn.Linear(512, 256)\n",
-        "    self.fc3 = nn.Linear(256, 64)\n",
-        "    self.fc4 = nn.Linear(64, 10)\n",
+        "    self.layer1 = nn.Linear(28*28, 512)\n",
+        "    self.layer2 = nn.Linear(512, 256)\n",
+        "    self.layer3 = nn.Linear(256, 64)\n",
+        "    self.layer4 = nn.Linear(64, 10)\n",
         "\n",
         "  def forward(self, x):\n",
         "    x = x.view(-1, 28 * 28)\n",
-        "    x = torch.relu(self.fc1(x))\n",
-        "    x = torch.relu(self.fc2(x))\n",
-        "    x = torch.relu(self.fc3(x))\n",
-        "    x = self.fc4(x)\n",
+        "    x = torch.relu(self.layer1(x))\n",
+        "    x = torch.relu(self.layer2(x))\n",
+        "    x = torch.relu(self.layer3(x))\n",
+        "    x = self.layer4(x)\n",
         "    return x"
-      ],
-      "metadata": {
-        "id": "rG9_bCnIdxiw"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "m5cbeXuaf2hZ"
+      },
+      "outputs": [],
       "source": [
         "model = NN()\n",
         "loss_fn = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr=0.001)"
-      ],
-      "metadata": {
-        "id": "m5cbeXuaf2hZ"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "qmYQbi5NgHoR"
+      },
+      "outputs": [],
       "source": [
         "for i in range(5):\n",
         "  for images, labels in X_train:\n",
@@ -115,15 +106,15 @@
         "    optimizer.zero_grad()\n",
         "    loss.backward()\n",
         "    optimizer.step()"
-      ],
-      "metadata": {
-        "id": "qmYQbi5NgHoR"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "-t8_kEFehFQv"
+      },
+      "outputs": [],
       "source": [
         "total = correct = 0\n",
         "with torch.no_grad():\n",
@@ -132,19 +123,11 @@
         "    _, predicted = torch.max(outputs, 1)\n",
         "    total += labels.size(0)\n",
         "    correct += (predicted == labels).sum().item()"
-      ],
-      "metadata": {
-        "id": "-t8_kEFehFQv"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "print(f\"Test Accuracy: {100 * correct / total}%\")"
-      ],
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -152,16 +135,33 @@
         "id": "ApxDclEbhlqW",
         "outputId": "0f369166-a7ee-4fc4-e447-a750992f81bf"
       },
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Test Accuracy: 95.85%\n"
           ]
         }
+      ],
+      "source": [
+        "\n",
+        "print(f\"Test Accuracy: {100 * correct / total}%\")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
